# rpi4_linux_cpp_development

./: .bash_history  .gitignore  Dockerfile  Makefile  README.md  rpi-arm64-toolchain.cmake
scripts/: docker_run.sh
src/: CMakeLists.txt  helloworld.cpp
x-tools/aarch64-rpi4-linux-gnu/: build.log.bz2
x-tools/aarch64-rpi4-linux-gnu/aarch64-rpi4-linux-gnu/lib/ldscripts/: aarch64elf.x  aarch64elf.xbn  aarch64elf.xc  aarch64elf.xce  aarch64elf.xd  aarch64elf.xdc  aarch64elf.xdce  aarch64elf.xde  aarch64elf.xdw  aarch64elf.xdwe  aarch64elf.xe  aarch64elf.xn  aarch64elf.xs  aarch64elf.xsc  aarch64elf.xsce  aarch64elf.xse  aarch64elf.xsw  aarch64elf.xswe  aarch64elf.xw  aarch64elf.xwe  aarch64elf32.x  aarch64elf32.xbn  aarch64elf32.xc  aarch64elf32.xce  aarch64elf32.xd  aarch64elf32.xdc  aarch64elf32.xdce  aarch64elf32.xde  aarch64elf32.xdw  aarch64elf32.xdwe  aarch64elf32.xe  aarch64elf32.xn  aarch64elf32.xs  aarch64elf32.xsc  aarch64elf32.xsce  aarch64elf32.xse  aarch64elf32.xsw  aarch64elf32.xswe  aarch64elf32.xw  aarch64elf32.xwe  (+200 more)
x-tools/aarch64-rpi4-linux-gnu/aarch64-rpi4-linux-gnu/sysroot/lib/: ld-linux-aarch64.so.1  libBrokenLocale.so.1  libanl.so.1  libatomic.so.1.2.0  libc_malloc_debug.so.0  libdl.so.2  libgcc_s.so.1  libitm.so.1.0.0  libm.so.6  libmvec.so.1  libnsl.so.1  libnss_compat.so.2  libnss_db.so.2  libnss_dns.so.2  libnss_files.so.2  libnss_hesiod.so.2  libpthread.so.0  libresolv.so.2  librt.so.1  libstdc++.so.6.0.32-gdb.py  libthread_db.so.1  (+1 more)
x-tools/aarch64-rpi4-linux-gnu/lib/: libcc1.so.0.0.0
x-tools/aarch64-rpi4-linux-gnu/share/gdb/: gdbinit
(+21 files in other folders)
